# haskell-misc

./: main.hi  main.hs
ds/: CHANGELOG.md  ds.cabal  operations.hi  operations.hs
ds/app/: Main.hs  SpecialFunctions.hs
ds/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
